# RPCFramework

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: customer_support_agent.py  invoice_client.py  invoice_server.py  openai_customer_support_agent.py  test_customer_support.py
src/rpcframework/: .env  __init__.py  errors.py  main.py  rpc_client.py  schemas.py
src/rpcframework/client/: client.py  rpc_client.py
src/rpcframework/config/: default.py
src/rpcframework/discovery/: discovery.db  discovery_client.py  discovery_service.py  models.py
src/rpcframework/server/: dispatcher.py  registry.py
src/rpcframework/transport/: http.py
