[project]
name = "rpcframework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulrafay85", email = "rafaykhank982@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx==0.24.1",
    "openai-agents>=0.0.7",
    "pydantic>=2.11.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
rpcframework = "rpcframework:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
